tdf#119820 sw: optimize SwTextGlyphsKey comparison

Import time before:

12.192 seconds

After:

5.836 seconds (47.87% of baseline) for me.

Change-Id: Ifd650addaae3fe25b45cf0fd452f78372e60c467